# taskgraph

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: graph_benchmarks.rs
docs/: ARCHITECTURE.md  framework.md  implementation.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  workflow.md
docs/issues/: README.md  cache-not-persisted.md  code-review-phase-4.md  incomplete-workflow-commands.md  index-invalidation-strategy.md  low-test-coverage.md  path-map-storage.md  safetensor-update-strategy.md  workflow-commands-complete.md
docs/research/: context_branching.md  cost_benefit_analysis_framework.py
docs/reviews/: README.md  phases-1-3-complete.md
scripts/: benchmark.sh
src/: cache.rs  cli.rs  config.rs  discovery.rs  embedding.rs  error.rs  graph.rs  lib.rs  main.rs  output.rs  task.rs
src/commands/: bottleneck.rs  cache_cmd.rs  create.rs  critical.rs  cycles.rs  decompose.rs  delete.rs  deps.rs  edit.rs  embed.rs  graph_cmd.rs  init.rs  list.rs  mod.rs  parallel.rs  risk.rs  risk_path.rs  search.rs  show.rs  topo.rs  validate.rs  workflow_cost.rs
tests/fixtures/cycles/: task-a.md  task-b.md  task-c.md
tests/fixtures/decompose/: task-broad-scope.md  task-high-risk.md  task-ok-scope-risk.md  task-system-scope.md
tests/fixtures/invalid/: invalid-task.md
tests/fixtures/risk/: task-critical-risk.md  task-high-risk.md  task-low-risk.md  task-medium-risk.md  task-no-risk.md
tests/fixtures/tasks/: task-one.md  task-three.md  task-two.md
tests/integration/: commands.rs
