[package]
name = "taskgraph"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI tool for managing task dependencies using markdown files"
repository = "https://github.com/alkimiadev/taskgraph"
readme = "README.md"
keywords = ["task", "dependency", "graph", "cli", "markdown"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "taskgraph"
path = "src/lib.rs"

[[bin]]
name = "taskgraph"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration/commands.rs"

[dependencies]
# Graph
petgraph = "0.7"

# Parsing
gray_matter = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Platform directories
dirs = "6.0"

# Directory scanning
walkdir = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Semantic search dependencies (optional)
model2vec-rs = { git = "https://github.com/alkimiadev/model2vec-rs", branch = "feature/encode-with-stats", optional = true }
safetensors = { version = "0.5", optional = true }
ndarray = { version = "0.15", optional = true }
twox-hash = { version = "2.0", optional = true }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = []
semantic = ["dep:model2vec-rs", "dep:safetensors", "dep:ndarray", "dep:twox-hash"]

[profile.release]
opt-level = 3
lto = true
strip = true