[package]
name = "taskgraph"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI tool for managing task dependencies using markdown files"
repository = "https://github.com/alkimiadev/taskgraph"
readme = "README.md"
keywords = ["task", "dependency", "graph", "cli", "markdown"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "taskgraph"
path = "src/lib.rs"

[[bin]]
name = "taskgraph"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration/commands.rs"

[dependencies]
# Graph
petgraph = "0.7"

# Parsing
gray_matter = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Platform directories
dirs = "6.0"

# Directory scanning
walkdir = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"

[[bench]]
name = "graph_benchmarks"
harness = false

[features]
default = []

[profile.release]
opt-level = 3
lto = true
strip = true